# prune_graph

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pixi.toml
.github/workflows/: ci.yml  release-please.yml  rust.yml  semantic-prs.yml
src/: graph.rs  io.rs  main.rs  parse_args.rs
test/: example.subset  example.tsv
