[package]
name = "prune_graph"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
flexi_logger = "0.29"
itertools = "0.14"
petgraph = "0.7"
rayon = "1.10"
fasteval = "0.2"
