[package]
name = "prune_graph"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
log = "0.4"
flexi_logger = "0.31"
itertools = "0.14"
petgraph = "0.8"
rayon = "1.11"
fasteval = "0.2"
