[package]
name = "prune_graph"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
itertools = "0.14"
petgraph = "0.8"
rayon = "1.11"
fasteval = "0.2"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["chrono"]}
tracing-indicatif = "0.3"
indicatif = {version = "0.18", features = ["rayon"]}
